[package]
name = "msgcli"
version = "0.1.0"
authors = ["Fredrik.Simonsson@thesimson.net>"]
edition = "2018"


[dependencies]

serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"
substrate-api-client = { git = "https://github.com/simonsso/substrate-api-client.git", branch = 'polkadexinternaltestnet' }
# substrate-api-client = { path = "../substrate-api-client" }

sp-core = { git = 'https://github.com/paritytech/substrate.git', rev = 'e5437efefa82bd8eb567f1245f0a7443ac4e4fe7', package = 'sp-core', default-features = false, features = ['full_crypto'] }
keyring = { git = 'https://github.com/paritytech/substrate.git', rev = 'e5437efefa82bd8eb567f1245f0a7443ac4e4fe7', package = 'sp-keyring' }